<?xml version="1.0"?>
<package format="2">
  <name>mmmwe</name>
  <version>0.1.0</version>
  <description>Minimal mobile manipulator waiter example.</description>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
